<resources>
    <string name="app_name">SQLite Demo</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
